@@ -1,3 +1,9 @@
+2005-06-13 Jens Tkotz <jens@peino.de>  1.5.1-cvs-b31
+
+	* Fix: When copying a photo to an album where "add to beginning" is enabled,
+	       the additional Data was still added to last item.
+	  Thanks to Johnstar.
+		   	 
 2005-06-09 Jens Tkotz <jens@peino.de>  1.5.1-cvs-b30
 
 	* Fix: Navigator change was in albums.php was wrong.
